# opencv-gpu-tracker

./: CMakeLists.txt  README.md  ThreadSafeQueue.hpp  UavTracker.cpp  UavTracker.hpp
src/: Telemetry.hpp  UavTracker.cpp  UavTracker.hpp  main.cpp
